--- a/part3/src/members/package.json
+++ b/part3/src/members/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon --inspect index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Mike Errington",
@@ -12,7 +14,6 @@
     "dotenv": "^4.0.0",
     "github": "^12.0.1",
     "koa": "^2.3.0",
-    "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.2.1",
     "lodash": "^4.17.4",
     "mongodb": "^2.2.33"
