--- a/part3/deploy/docker-compose.yml
+++ b/part3/deploy/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3',
+version: '3'
 services:
   web: 
     image: 'nginx:1.13-alpine'
@@ -7,30 +7,52 @@ services:
       - orgs
       - comments
       - members
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - "8080:80"
   mongo:
     image: 'mongo:3.4'
     expose:
       - "27017"
   orgs:
+    build: 
+      context: ../src/
+      dockerfile: orgs/Dockerfile
+    user: "node"
+    command: "npm start"
     depends_on:
       - mongo
     expose:
       - "8080"
     environment:
+      - NODE_ENV=production
       - MONGO_URL=mongodb://mongo:27017
       #- GITHUB_TOKEN=
   comments:
+    build: 
+      context: ../src/
+      dockerfile: comments/Dockerfile
+    user: "node"
+    command: "npm start"
     depends_on:
       - mongo
     expose:
       - "8080"
     environment:
+      - NODE_ENV=production
       - MONGO_URL=mongodb://mongo:27017
       #- GITHUB_TOKEN=
   members:
+    build: 
+      context: ../src/
+      dockerfile: members/Dockerfile
+    user: "node"
+    command: "npm start"
     depends_on:
       - mongo
     expose:
       - "8080"
     environment:
+      - NODE_ENV=production
       #- GITHUB_TOKEN=
