--- a/part3/src/utils/package.json
+++ b/part3/src/utils/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "orgs",
+  "name": "utils",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon --inspect index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Mike Errington",
   "license": "MIT",
   "dependencies": {
-    "dotenv": "^4.0.0",
     "github": "^12.0.1",
-    "koa": "^2.3.0",
-    "koa-router": "^7.2.1",
     "lodash": "^4.17.4",
     "mongodb": "^2.2.33"
   }
